Add PlayerGameBoard and dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 /NetCoreBattleship/NetCoreBattleship/obj
 /NetCoreBattleship/NetCoreBattleship/bin/Debug/netcoreapp3.1
+/NetCoreBattleship/Battleship/bin/Debug/netstandard2.0
+/NetCoreBattleship/Battleship/obj
